objects/Position__c.object
<CustomObject>
    <fields>
        <fullName>Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C#</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Opened__c</fullName>
        <formula>IF(  ISBLANK(Close_Date__c ) ,  TODAY() - Open_Date__c ,  Close_Date__c - Open_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Educational_Requirements__c</fullName>
        <label>Educational Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Retail Operations</fullName>
                </value>
                <value>
                    <fullName>Warehousing</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hire_By__c</fullName>
        <label>Hire By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JavaScript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JavaScript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Java__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>San Francisco, CA</fullName>
                </value>
                <value>
                    <fullName>New York,NY</fullName>
                </value>
                <value>
                    <fullName>Tokyo, Japan</fullName>
                </value>
                <value>
                    <fullName>Mumbai, India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resposibilities__c</fullName>
        <label>Resposibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Open - Approved</fullName>
                </value>
                <value>
                    <fullName>Closed - Filled</fullName>
                </value>
                <value>
                    <fullName>Closed - Not Approved</fullName>
                </value>
                <value>
                    <fullName>Closed - Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Site__c</fullName>
        <label>Technical Site</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Internship</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Position</label>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Closeddate_validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Status__c , &apos;Closed - Not Approved&apos;)  &amp;&amp; ISBLANK( Close_Date__c )</errorConditionFormula>
        <errorDisplayField>Close_Date__c</errorDisplayField>
        <errorMessage>Please give the Close Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maximum_Pay_Rule</fullName>
        <active>true</active>
        <description>Maximum pay should be 95000$</description>
        <errorConditionFormula>Max_Pay__c   &gt; 95000</errorConditionFormula>
        <errorDisplayField>Max_Pay__c</errorDisplayField>
        <errorMessage>The Maximum Pay should not be greater than 95000 $</errorMessage>
    </validationRules>
</CustomObject>